# Kitronik-Pico-Simply-Servos-C

./: CMakeLists.txt  KitronikPicoSimplyServos.c  KitronikPicoSimplyServos.h  README.md  main.c  pico-simply-servos.uf2  servo.pio
